@@ -314,11 +314,16 @@ public class Slave
                     OutputStream tmpOut = socket.getOutputStream();
                     if (useCompression)
                         {
-                        Output.initialError("JDK 1.5 has broken compression.  For now, you must set eval.compression=false");
+                        //Output.initialError("JDK 1.5 has broken compression.  For now, you must set eval.compression=false");
                         /*
                           tmpIn = new CompressingInputStream(tmpIn);
                           tmpOut = new CompressingOutputStream(tmpOut);
                         */
+			tmpIn = Output.makeCompressingInputStream(tmpIn);
+			tmpOut = Output.makeCompressingOutputStream(tmpOut);
+			if (tmpIn == null || tmpOut == null)
+			    Output.initialError("You do not appear to have JZLib installed on your system, and so must set eval.compression=false.  " +
+				"To get JZLib, download from the ECJ website or from http://www.jcraft.com/jzlib/");
                         }
                                                 
                     dataIn = new DataInputStream(tmpIn);
